--- a/A_dbms/templates/dbms/meeting/meeting/meeting-filter.html
+++ b/A_dbms/templates/dbms/meeting/meeting/meeting-filter.html
@@ -1,6 +1,6 @@
 <div>
     <label>
-        {% if kwargs.meeting_state == None %}
+        {% if kwargs.review_model == None %}
             <a class="active btn btn-primary btn-sm"
                href="{% url 'dbms:meeting_all' %}">全部</a>
         {% else %}
@@ -9,15 +9,15 @@
         {% endif %}
 
         {# 方式二：#}
-        {% for item in meeting_state_list %}
-            {% if item.0 == kwargs.meeting_state %}
+        {% for item in review_model_list %}
+            {% if item.0 == kwargs.review_model %}
                 <a class="active btn btn-primary btn-sm"
-                   href="{% url 'dbms:meeting' meeting_state=item.0 %}">
+                   href="{% url 'dbms:meeting' review_model=item.0 %}">
                     {{ item.1 }}
                 </a>
             {% else %}
                 <a class="btn btn-primary btn-sm"
-                   href="{% url 'dbms:meeting' meeting_state=item.0 %}">
+                   href="{% url 'dbms:meeting' review_model=item.0 %}">
                     {{ item.1 }}
                 </a>
             {% endif %}
