--- a/A_dbms/templates/dbms/article/lending/article-lending-tab.html
+++ b/A_dbms/templates/dbms/article/lending/article-lending-tab.html
@@ -20,6 +20,12 @@
         <li role="presentation">
             <a href="#counter-stock " style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">股权</a></li>
+        <li role="presentation">
+            <a href="#counter-draft" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">票据</a></li>
+        <li role="presentation">
+            <a href="#counter-chattel" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">其他</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -37,5 +43,9 @@
             {% include 'dbms/appraisal/lending/tab/counter-receive.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="counter-stock"><!--股权质押-->
             {% include 'dbms/appraisal/lending/tab/counter-stock.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="counter-draft"><!--票据质押-->
+            {% include 'dbms/appraisal/lending/tab/counter-draft.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="counter-chattel"><!--动产抵押-->
+            {% include 'dbms/appraisal/lending/tab/counter-chattel.html' %}</div>
     </div>
 </div>
