--- a/A_dbms/templates/dbms/article/scan/article-summry.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry.html
@@ -8,7 +8,7 @@
                 {% endif %}
                 <a class="btn btn-primary btn-sm " id="editArticle">修改</a><!--#path('article/del/'-->
                 <a class="btn btn-danger btn-sm " id="delArticle">删除</a><!--#path('article/del/'-->
-            {% elif  PAGE_TITLE == '放款次序' %}
+            {% elif  PAGE_TITLE == '项目次序' %}
                 <a class="btn btn-primary btn-sm" id="addAgree">出合同</a>
             {% endif %}
         </label>
