--- a/A_dbms/templates/dbms/article/scan/article-tab.html
+++ b/A_dbms/templates/dbms/article/scan/article-tab.html
@@ -19,9 +19,9 @@
         <li role="presentation" class="active">
             <a href="#lenging" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">放款次序</a></li>
-        <li role="presentation">
-            <a href="#agree" style="background-color: #f5f5f5"
-               aria-controls="settings" role="tab" data-toggle="tab">委托合同</a></li>
+        {#        <li role="presentation">#}
+        {#            <a href="#agree" style="background-color: #f5f5f5"#}
+        {#               aria-controls="settings" role="tab" data-toggle="tab">委托合同</a></li>#}
         <li role="presentation">
             <a href="#article-change" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">变更情况</a></li>
@@ -41,8 +41,8 @@
             {% include 'dbms/appraisal/scan/tab/single.html' %} </div>
         <div role="tabpanel" class="tab-pane active" id="lenging"> <!--放款次序-->
             {% include 'dbms/article/scan/tab/lending.html' %} </div>
-        <div role="tabpanel" class="tab-pane" id="agree"> <!--委托合同-->
-            {% include 'dbms/article/scan/tab/agree.html' %} </div>
+        {#        <div role="tabpanel" class="tab-pane" id="agree"> <!--委托合同-->#}
+        {#            {% include 'dbms/article/scan/tab/agree.html' %} </div>#}
         <div role="tabpanel" class="tab-pane" id="article-change"><!--项目变更-->
             {% include 'dbms/appraisal/scan/tab/article-change.html' %} </div>
     </div>
