--- a/A_dbms/templates/dbms/agree/agree-counter-preview.html
+++ b/A_dbms/templates/dbms/agree/agree-counter-preview.html
@@ -44,9 +44,16 @@
     </style>
 {% endblock %}
 {% block body %}
-    <!--AGREE_TYP_LIST = ((1, '单笔'), (2, '最高额'), (3, '保函'))-->
-    {% if agree_obj.agree_typ == 1 %}
-        {% include 'dbms/agree/agree_board/entrust-single.html' %}
+    <!--COUNTER_TYP_LIST = (
+        (1, '企业担保'), (2, '个人保证'),
+        (11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (15, '车辆抵押'),
+        (31, '应收质押'), (32, '股权质押'), (33, '票据质押'),
+        (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))
+    AGREE_TYP_LIST = ((1, '单笔'), (2, '最高额'), (3, '保函'))-->
+    {% if agree_obj.agree_typ == 1 %} <!--单笔-->
+        {% if counter_obj.counter_typ == 1 %}<!--企业保证-->
+            {% include 'dbms/agree/agree_board/counter-single-sure-c.html' %}
+        {% endif %}
     {% elif agree_obj.agree_typ == 2 %}
         {% include 'dbms/agree/agree_board/entrust-maximum.html' %}
     {% endif %}
