--- a/A_dbms/templates/dbms/dun/dun/dun-table.html
+++ b/A_dbms/templates/dbms/dun/dun/dun-table.html
@@ -6,16 +6,18 @@
             <th>追偿金额</th>
             <th>追偿费用</th>
             <th>回收金额</th>
+            <th>剩余金额</th>
             <th>状态</th>
         </tr>
         </thead>
         <tbody>
-        {% for dun in p_list %}
+        {% for dun in p_list%}
             <tr>
                 <td><a href="{% url 'dbms:dun_scan' dun_id=dun.id %}">{{ dun.title }}</a></td>
                 <td align="right">{{ dun.dun_amount|floatformat:2 }}</td>
                 <td align="right">{{ dun.dun_charge_sun|floatformat:2 }}</td>
                 <td align="right">{{ dun.dun_retrieve_sun|floatformat:2 }}</td>
+                <td align="right">{{ dun.dun_balance|floatformat:2 }}</td>
                 <td>{{ dun.get_dun_stage_display }}</td>
             </tr>
         {% endfor %}
