--- a/A_dbms/templates/dbms/dun/seal_scan/dun-seal-summry-body.html
+++ b/A_dbms/templates/dbms/dun/seal_scan/dun-seal-summry-body.html
@@ -1,7 +1,7 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    追偿项目：<a href="{% url 'dbms:dun_scan' dun_id=seal_obj.dun.id %}">{{ seal_obj.dun }}</a></label>
+    追偿项目：<a href="{% url 'dbms:dun_scan' dun_id=dun_id %}">{{ seal_obj.dun }}</a></label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    资产：<a href="{% url 'dbms:warrant_scan' warrant_id=seal_obj.id %}">{{ seal_obj.warrant }}</a></label>
+    资产：<a href="{% url 'dbms:warrant_scan' warrant_id=warrant_id %}">{{ seal_obj.warrant }}</a></label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     查封情况：{{ seal_obj.get_seal_state_display }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
