--- a/A_dbms/templates/dbms/dun/seal_scan/tab/agent.html
+++ b/A_dbms/templates/dbms/dun/seal_scan/tab/agent.html
@@ -2,32 +2,31 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>委托合同</th>
-            <th>客户名称</th>
-            <th>银行名称</th>
-            <th>代偿日期</th>
-            <th>代偿本金</th>
-            <th>代偿利息</th>
-            <th>代偿罚息</th>
-            <th>代偿总额</th>
-            <th>状态</th>
+            <th>查询类型</th>
+            <th>评估日期</th>
+            <th>评估价值</th>
+            <th>拍卖日期</th>
+            <th>挂网价格</th>
+            <th>成交日期</th>
+            <th>成交金额</th>
+            <th>查询情况</th>
+            <th>查询日期</th>
+            <th>创建人</th>
         </tr>
         </thead>
         <tbody>
-        {% for compensatory in dun_obj.compensatory.all %}
+        {% for inquiry in seal_obj.inquiry_seal.all %}
             <tr>
-                <td>{{ compensatory.provide.notify.agree.agree_num }}</td>
-                <td>
-                    <a href="{% url 'dbms:compensatory_scan' compensatory_id=compensatory.id %}">
-                        {{ compensatory.provide.notify.agree.lending.summary.custom }}</a>
-                </td>
-                <td>{{ compensatory.provide.notify.agree.branch }}</td>
-                <td>{{ compensatory.compensatory_date }}</td>
-                <td align="right">{{ compensatory.compensatory_capital|floatformat:2 }}</td>
-                <td align="right">{{ compensatory.compensatory_interest|floatformat:2 }}</td>
-                <td align="right">{{ compensatory.default_interest|floatformat:2 }}</td>
-                <td align="right">{{ compensatory.compensatory_amount|floatformat:2 }}</td>
-                <td>{{ compensatory.get_dun_state_display }}</td>
+                <td>{{ inquiry.get_inquiry_type_display }}</td>
+                <td>{{ inquiry.evaluate_date }}</td>
+                <td align="right">{{ inquiry.evaluate_value|floatformat:2 }}</td>
+                <td>{{ inquiry.auction_date }}</td>
+                <td align="right">{{ inquiry.listing_price|floatformat:2 }}</td>
+                <td>{{ inquiry.transaction_date }}</td>
+                <td align="right">{{ inquiry.auction_amount|floatformat:2 }}</td>
+                <td>{{ inquiry.inquiry_detail }}</td>
+                <td>{{ inquiry.inquiryor_date }}</td>
+                <td>{{ inquiry.inquiryor }}</td>
             </tr>
         {% endfor %}
         </tbody>
