--- a/A_dbms/templates/dbms/appraisal/scan/tab/comment.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/comment.html
@@ -11,23 +11,11 @@
         </tr>
         </thead>
         <tbody>
-        {% for expert in article_obj.expert.all %}
-            <tr expert_nid="{{ expert.id }}">
-                <td>{{ expert.name }}</td>
-                <td>
-                    {% for  comment in article_obj.comment_summary.all %}
-                        {% if comment.expert.id == expert.id %}
-                            {{ comment.get_comment_type_display }}
-                        {% endif %}
-                    {% endfor %}
-                </td>
-                <td>
-                    {% for  comment in article_obj.comment_summary.all %}
-                        {% if comment.expert.id == expert.id %}
-                            {{ comment.concrete|default:"" }}
-                        {% endif %}
-                    {% endfor %}
-                </td>
+        {% for comment in article_obj.comment_summary.all %}
+            <tr expert_nid="{{ comment.expert.id }}">
+                <td>{{ comment.expert.name }}</td>
+                <td>{{ comment.get_comment_type_display }}</td>
+                <td>{{ comment.concrete|default:"" }}</td>
                 {% if PAGE_TITLE == '项目评审' %}
                     <td><a class="btn btn-primary btn-xs expert-comment">评审意见</a></td>
                 {% endif %}
