--- a/A_dbms/templates/dbms/agree/agree_board/counter-s-x.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter-s-x.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="split">
-        {% include 'dbms/agree/agree_board/entrust/home-page.html' %}
+        {% include 'dbms/agree/agree_board/counter/counter-home-page.html' %}
     </div>
-
     <div class="split">
         <p>经乙方申请，甲方同意接受乙方的委托，为乙方的贷款提供担保。为明确各自的权利、义务，
             甲乙双方遵照有关法律规定，经协商一致，订立本合同，并承诺共同遵守执行。</p>
         <p>一、保证的范围与期限</p>
+
         <p>甲方同意为乙方向贷款人<strong><u>{{ agree_obj.branch.name }}</u></strong>申请的自______年___月___日至
             ______年___月___日期间，额度为人民币<strong><u>{{ agree_obj.agree_amount }}</u></strong>万元（大写：
             _________________）的的流动资金贷款提供担保。</p>
@@ -18,8 +18,8 @@
             中约定的保证期间一致。</p>
         <p>超出甲方以上保证金额和保证期限的任何款项，甲方不承担担保责任。</p>
 
-
         <p>二、保证金、担保费及其他费用 </p>
+
         <p>（一）保证金
         <p>甲方可根据乙方的信用情况，向乙方收取一定比例的担保风险保证金。双方约定，甲方为乙方提供本合同担保收取
             的担保风险保证金金额为 此栏空白
@@ -34,12 +34,16 @@
         <p>5、乙方未在上述规定的时间内按时足额支付担保费的，甲方有权在乙方足额支付担保费之前（以到账时间为准）
             拒绝与贷款人签订保证或反担保合同；甲方已与贷款人订立保证合同的，乙方应按应付未付担保费金额的0.08%/
             日支付违约金。</p>
+
         <p>三、甲方的权利、义务</p>
+
         <p>（一）甲方有权对乙方的经营情况及借款的使用情况进行检查和了解。</p>
         <p>（二）甲方有权按照本合同第二条约定向乙方按时足额收取保证金、担保费。</p>
         <p>（三）甲方应对乙方提供的有关乙方的资料、文件、信息保密，但法律、法规规定的，司法、仲裁或其他类似程序
             或有关监管部门和其他有权机构要求披露的或本合同另有约定的除外。</p>
+
         <p>四、乙方的权利、义务</p>
+
         <p>（一）未经甲方书面同意，不得擅自与贷款人修改主合同。</p>
         <p>（二）乙方必须按主合同约定的还款方式、时间、数额严格执行还款计划。</p>
         <p>（三）未经甲方书面同意，乙方不得以出租、出售、出借、赠与、抵押、质押、转移、转让、置换等方式处分其甲
@@ -55,7 +59,9 @@
         <p>1、乙方改变经营决策，包括但不限于转股、改组、合并、分立、股份制改造、合资、合作、联营、承包、租赁、
             经营范围和注册资本变更等可能影响甲方权益的情形。</p>
         <p>2、乙方作出举借新债、对外担保等可能影响甲方作为保证人利益的其他重大经营决策时。</p>
+
         <p>五、反担保</p>
+
         <p>乙方向甲方提供反担保时，应签订《抵押反担保合同》、《质押反担保合同》、《保证反担保合同》并承诺下
             述事项：</p>
         <p>（一）与反担保抵押、质押、保证相关的一切费用，包括但不限于评估、保险、鉴定、登记、保管、公证等费用
@@ -72,10 +78,14 @@
             且该账户内的款项在抵押、质押期间，未经甲方书面同意，乙方不得单方面动用。</p>
         <p>（四）第三人为乙方之利益以财产、信用等方式向甲方提供反担保的，由乙方和第三人共同向甲方承担担保责任。</p>
         <p>（五）乙方向甲方提供的所有反担保措施落实前，未经甲方确认，乙方不得使用上述贷款。</p>
+
         <p>六、合同的变更和解除</p>
+
         <p>（一）本合同生效后，甲乙任何一方不得擅自变更和解除本合同。</p>
         <p>（二）未经甲方书面同意，乙方不得采取任何方式变更、转移或者变相变更、转移本合同项下的权利、义务。</p>
+
         <p>七、违约责任</p>
+
         <p>（一）本合同生效后，甲乙双方均应履行本合同约定的义务，任何一方不履行或不完全履行本合同约定义
             务的，应当承担相应的违约责任。</p>
         <p>（二）在本合同履行过程中，如发生以下情形之一的，即视为乙方违约：</p>
@@ -87,8 +97,8 @@
             新的担保财产时。</p>
         <p>6、乙方向甲方提供虚假资料，或隐瞒真实信息，致使甲方依据现有信息作出错误判断而提供担保的。</p>
         <p>7、乙方出现欠息、经营状态明显恶化、发生严重安全、质量、公共事故，或其他突发事件、涉诉或重大法律
-            纠纷、拖欠职工工资、财务指标异常或恶化、资金大量异常移动
-            、企业非正常停产、企业负责人失去联系、企业骨干多人离职等不安事项。</p>
+            纠纷、拖欠职工工资、财务指标异常或恶化、资金大量异常移动</p>
+        、企业非正常停产、企业负责人失去联系、企业骨干多人离职等不安事项。</p>
         <p>8、乙方及反担保人发生了其他足以影响其偿债能力或致使其缺乏偿债诚意的状况及行为。</p>
         <p>9、乙方违反主合同的约定或者发生主合同项下的违约事项，致使银行要求甲方承担担保责任的。</p>
         <p>10、乙方发生危及、损害或可能危及、损害甲方权益的其他事项。</p>
@@ -116,27 +126,35 @@
         <p>（四）在本合同履行过程中，如因乙方违反本合同、反担保合同约定，致使银行贷款不予/不能发放或乙
             方主动放弃银行贷款的，乙方应向甲方支付拟贷款金额1%的尽职调查费，尽职调查费用甲方可以从乙
             方已缴纳的担保费用中直接扣除。</p>
+
         <p>八、义务的连续性</p>
+
         <p>本合同项下乙方的一切义务均具有连续性，对其继承人、接管人、受让人及其合并、改组、更改名称等
             后的主体均具有完全的约束力，不受任何争议、索赔和法律程序及上级单位任何指令和乙方与任何自然人
             或法人签订的任何合同、文件的影响，也不因乙方破产、无力偿还债务、丧失企业资格、更改组织章程以
             及发生任何本质上的变更而有任何改变。</p>
+
         <p>九、其他约定事项</p>
+
         <p>此栏空白</p>
+
         <p>十、争议的解决</p>
+
         <p>凡因本合同发生的及与本合同有关的其他任何争议，甲乙双方应协商解决；协商不成的，甲乙双方同意向本
             合同签订地有管辖权的人民法院提起诉讼，本合同签订地为成都市武侯区。</p>
+
         <p>十一、合同的生效</p>
+
         <p>本合同由甲方法定代表人或授权代理人、乙法定代表人或授权代理人签章（签字或盖章）并加盖公章或
             合同专用章后生效。</p>
-        <p>十二、通知送达条款
-            {% include 'dbms/agree/agree_board/entrust/service-clause.html' %}
-        <p>十三、其他</p>
-        {% include 'dbms/agree/agree_board/entrust/20-other.html' %}
-    </div>
 
+        <p>十二、通知送达条款</p>
+        {% include 'dbms/agree/agree_board/counter/16-service-clause.html' %}
+        <p>十三、其他</p>
+        {% include 'dbms/agree/agree_board/counter/20-other.html' %}
+    </div>
     <div class="split">
-        {% include 'dbms/agree/agree_board/entrust/signature-page.html' %}
+        {% include 'dbms/agree/agree_board/counter/counter-signature-page.html' %}
     </div>
 </div>
 
