--- a/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
@@ -122,8 +122,7 @@
         <p>1）要求乙方、担保人限期纠正其违约行为；</p>
         <p>2）要求乙方赔偿因违约而给甲方造成的损失；</p>
         <p>3）要求乙方支付甲方本合同约定担保最高限额的5%的违约金；</p>
-        <p>
-            4）要求乙方在甲方规定的期限内提前偿还全部借款本息，同时有权要求贷款银行停止发放尚未划付的贷款、
+        <p>4）要求乙方在甲方规定的期限内提前偿还全部借款本息，同时有权要求贷款银行停止发放尚未划付的贷款、
             提前收回已发放的贷款本息，如贷款银行怠于提前收贷，或乙方资金不能保证提前偿还全部借款本息时，
             甲方有权在约定担保责任范围内提前对乙方进行诉讼追偿并采取财产保全措施或处置担保财产，乙方不能以
             任何理由抗辩；</p>
@@ -154,22 +153,14 @@
 
         <p>十六、通知送达条款</p>
         {% include 'dbms/agree/agree_board/entrust/service-clause.html' %}
-
         <p>十七、甲乙双方同意约定的其他事项：</p>
         <p> 此栏空白</p>
         <p>十八、因本协议发生的争议，经协商不能达成一致意见，应向本合同签订地人民法院提起诉讼，本合同签订地
             为成都市武侯区。</p>
         <p>十九、本协议经甲方与乙方加盖公章且法定代表人签章即生效。</p>
         <p>二十、其他</p>
-        <p>（一）本合同未尽事宜，甲乙双方可另行达成书面协议，作为本合同附件。本合同的任何附件、修改或补充均
-            构成本合同不可分割的一部分，与本合同具有同等的法律效力。</p>
-        <p>（二）本合同独立于其他关联合同，其他关联合同的无效并不导致本合同无效。如本合同的某条款或某条款的
-            部分内容被认定无效，该无效条款或该无效部分并不影响本合同及本合同其他条款或该条款其他内容的有效性。</p>
-        <p>（三）本合同正本一式肆份，甲方执壹份，乙方执壹份，登记机关贰份。具有同等的法律效力。</p>
-        <p>声明：乙方已阅读本合同所有条款。应乙方要求，甲方已经就本合同做了相应的条款说明。乙方对本合同条款
-            的含义及相应的法律后果已全部通晓并充分理解。</p>
-        <p>乙方确认：</p>
-        <p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+        {% include 'dbms/agree/agree_board/entrust/20-other.html' %}
+
     </div>
 
     <div class="split">
