--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -17,9 +17,13 @@
                     {% include 'dbms/agree/modl/mod_form/counter-assure-p.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-house.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-ground.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-coustruct.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-receivable.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-stock.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-draft.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-vehicle.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-chattel.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-other.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
