--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-chattel.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-chattel.html
@@ -1,7 +1,7 @@
 <div id="form_counter_chattel" class="extend" style="display: none">
 
     <div class="form-group"><!--动产抵押-->
-        <label for="id_chattel" class="col-sm-3 control-label">动产抵押：</label>
+        <label for="id_chattel" class="col-sm-3 control-label">动产：</label>
         <div class="col-sm-9">
             <select name="chattel" class="form-control" multiple="" id="id_chattel" required="">
                 {% for chattel in warrants_c_lending_list %}
