--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-ground.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-ground.html
@@ -1,7 +1,7 @@
 <div id="form_counter_ground" class="extend" style="display: none">
 
-    <div class="form-group"><!--反担保房产-->
-        <label for="id_ground" class="col-sm-3 control-label">反担保房产：</label>
+    <div class="form-group"><!--反担保土地-->
+        <label for="id_ground" class="col-sm-3 control-label">反担保土地：</label>
         <div class="col-sm-9">
             <select name="ground" class="form-control" multiple="" id="id_ground" required="">
                 {% for ground in warrants_g_lending_list %}
