--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-stock-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-stock-add.html
@@ -2,13 +2,13 @@
 
     <div class="form-ground"><!--股权质押-->
         <label for="id_sure_stock"
-               class="col-sm-3 control-label">{{ form_lendingground_add.sure_ground.label }}：</label>
+               class="col-sm-3 control-label">{{ form_lendingstock_add.sure_stock.label }}：</label>
         <div class="col-sm-9">
             <select name="sure_stock" id="id_sure_stock" multiple="" required=""
                     class="form-control search-id">
             </select>
         </div>
-        <label id="e_sure_stock" class="pull-right">{{ form_lendingground_add.sure_ground.errors }}</label>
+        <label id="e_sure_stock" class="pull-right">{{ form_lendingstock_add.sure_stock.errors }}</label>
     </div>
 
     <!--
