--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-vehicle-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-vehicle-add.html
@@ -1,13 +1,13 @@
-<div id="form_lendingdraft_add" class="guarantee-extend" style="display: none">
+<div id="form_lendingvehicle_add" class="guarantee-extend" style="display: none">
 
-    <div class="form-group"><!--票据质押-->
-        <label for="id_sure_draft" class="col-sm-3 control-label">{{ form_lendingdraft_add.sure_draft.label }}：</label>
+    <div class="form-group"><!--车辆抵押-->
+        <label for="id_sure_vehicle" class="col-sm-3 control-label">{{ form_lendingvehicle_add.sure_vehicle.label }}：</label>
         <div class="col-sm-9">
-            <select name="sure_draft" id="id_sure_draft" multiple="" required="" class="form-control search-id">
+            <select name="sure_vehicle" id="id_sure_vehicle" multiple="" required="" class="form-control search-id">
                 <!--<option value="" selected="">---------</option>-->
             </select>
         </div>
-        <label id="e_sure_draft" class="pull-right">{{ form_lendingchattel_add.sure_draft.errors }}</label>
+        <label id="e_sure_vehicle" class="pull-right">{{ form_lendingvehicle_add.sure_vehicle.errors }}</label>
     </div>
 
     <!--
