--- a/A_dbms/templates/dbms/warrant/modl/warrant-add-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-add-mod.html
@@ -17,12 +17,14 @@
                         {% include 'dbms/warrant/modl/mod_form/warrant-custom-search.html' %}
                         {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/ground-add-edit.html' %}
+                        {% include 'dbms/warrant/modl/mod_form/construct-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/hypothec-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/receivable-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/stockes-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/draft-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/vehicle-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/chattel-add-edit.html' %}
+                        {% include 'dbms/warrant/modl/mod_form/other-add-edit.html' %}
                     {% elif warrant_typ_n == 1 %}
                         {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}
