--- a/A_dbms/templates/dbms/agree/extra/js-counter-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-counter-add.html
@@ -19,11 +19,11 @@
             $('.extend').hide();
             var selected_counter_typ = $('#id_counter_typ').val();
             console.log(selected_counter_typ);
-            {#    <!-- COUNTER_TYP_LIST = (#}
+            {#COUNTER_TYP_LIST = (#}
             {#(1, '企业担保'), (2, '个人保证'),#}
-            {#(11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (15, '车辆抵押'),#}
-            {#(31, '应收质押'), (32, '股权质押'), (33, '票据质押'),#}
-            {#(51, '股权预售'), (52, '房产预售'), (53, '土地预售'))-->#}
+            {#(11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (14, '在建工程抵押'), (15, '车辆抵押'),#}
+            {#(31, '应收质押'), (32, '股权质押'), (33, '票据质押'), (34, '动产质押'),#}
+            {#(51, '股权预售'), (52, '房产预售'), (53, '土地预售'))#}
             switch (selected_counter_typ) {
                 case ('1'): {#企业保证#}
                     $('#form_counter_assure_c').show();
@@ -43,6 +43,9 @@
                 case ('53'):{#土地预售#}
                     $('#form_counter_ground').show();
                     break;
+                case ('14'):{#在建工程抵押#}
+                    $('#form_counter_coustruct').show();
+                    break;
                 case ('31'):{#应收质押#}
                     $('#form_counter_receivable').show();
                     break;
@@ -52,8 +55,20 @@
                 case ('51'):{#股权预售#}
                     $('#form_counter_stock').show();
                     break;
-                case ('13'):{#动产质押#}
+                case ('33'):{#票据质押#}
+                    $('#form_counter_receivable').show();
+                    break;
+                case ('15'):{#车辆抵押#}
+                    $('#form_counter_vehicle').show();
+                    break;
+                case ('13'):{#动产抵押#}
                     $('#form_counter_chattel').show();
+                    break;
+                case ('34'):{#动产质押#}
+                    $('#form_counter_chattel').show();
+                    break;
+                case ('41'):{#其他权利质押#}
+                    $('#form_counter_other').show();
                     break;
                 default:
                     $('.extend').hide()
