--- a/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
+++ b/A_dbms/templates/dbms/appraisal/lending/appraisal-lending-tab.html
@@ -11,6 +11,9 @@
             <a href="#counter-ground" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">土地</a></li>
         <li role="presentation">
+            <a href="#counter-construct" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">在建工程</a></li>
+        <li role="presentation">
             <a href="#counter-receive" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab">应收</a></li>
         <li role="presentation">
@@ -20,7 +23,13 @@
             <a href="#counter-draft" style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">票据</a></li>
         <li role="presentation">
+            <a href="#counter-vehicle" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">车辆</a></li>
+        <li role="presentation">
             <a href="#counter-chattel" style="background-color: #f5f5f5"
+               aria-controls="home" role="tab" data-toggle="tab">动产</a></li>
+        <li role="presentation">
+            <a href="#counter-other" style="background-color: #f5f5f5"
                aria-controls="home" role="tab" data-toggle="tab">其他</a></li>
     </ul>
 
@@ -32,13 +41,19 @@
             {% include 'dbms/appraisal/lending/tab/counter-house.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="counter-ground"><!--土地反担保-->
             {% include 'dbms/appraisal/lending/tab/counter-ground.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="counter-construct"><!--在建工程担保-->
+            {% include 'dbms/appraisal/lending/tab/counter-construct.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="counter-receive"><!--应收质押-->
             {% include 'dbms/appraisal/lending/tab/counter-receive.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="counter-stock"><!--股权质押-->
             {% include 'dbms/appraisal/lending/tab/counter-stock.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="counter-draft"><!--票据质押-->
             {% include 'dbms/appraisal/lending/tab/counter-draft.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="counter-vehicle"><!--车辆-->
+            {% include 'dbms/appraisal/lending/tab/counter-vehicle.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="counter-chattel"><!--动产抵押-->
             {% include 'dbms/appraisal/lending/tab/counter-chattel.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="counter-other"><!--动产抵押-->
+            {% include 'dbms/appraisal/lending/tab/counter-other.html' %}</div>
     </div>
 </div>
