--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-receivable-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-receivable-add.html
@@ -2,13 +2,13 @@
 
     <div class="form-ground"><!--应收质押-->
         <label for="id_sure_receivable"
-               class="col-sm-3 control-label">{{ form_lendingground_add.sure_ground.label }}：</label>
+               class="col-sm-3 control-label">{{ form_lendinggreceivable_add.sure_receivable.label }}：</label>
         <div class="col-sm-9">
             <select name="sure_receivable" id="id_sure_receivable" multiple="" required=""
                     class="form-control search-id">
             </select>
         </div>
-        <label id="e_sure_receivable" class="pull-right">{{ form_lendingground_add.sure_ground.errors }}</label>
+        <label id="e_sure_receivable" class="pull-right">{{ form_lendinggreceivable_add.sure_receivable.errors }}</label>
     </div>
 
     <!--
